@@ -78,7 +78,7 @@ public class EvaluateVisitor implements ExpressionParserVisitor {
         String leafName = node.name;
         Expression expression = ctx.getNamespace().getExpression(leafName);
         if (expression != null) {
-            return new Boolean(expression.match(ctx.getClassMetaData(), ctx.getMemberMetaData(), ctx.getExceptionType()));
+            return Boolean.valueOf(expression.match(ctx.getClassMetaData(), ctx.getMemberMetaData(), ctx.getExceptionType()));
         }
         else {
             throw new RuntimeException("no such registered expression");
